Update 'h3mkf9pvq-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:9b6aeae5b63b83d182f76c983a16a3f590116d02@sha256:b7d963a3dae3454ba6452fb1812bbfe8c7858dfdecc8c7cbb025740eb873534e

--- a/components/h3mkf9pvq-python/overlays/development/deployment-patch.yaml
+++ b/components/h3mkf9pvq-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: h3mkf9pvq-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:9b6aeae5b63b83d182f76c983a16a3f590116d02@sha256:b7d963a3dae3454ba6452fb1812bbfe8c7858dfdecc8c7cbb025740eb873534e
+          name: container-image
